[gd_scene load_steps=2 format=3 uid="uid://6275gmlk8np4"]

[ext_resource type="Script" uid="uid://geig8oginrpb" path="res://scripts/DeckCardTile.gd" id="1_4u8ic"]

[node name="DeckCardTile" type="PanelContainer"]
custom_minimum_size = Vector2(280, 280)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4u8ic")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Title Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconBox" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3

[node name="QtyRow" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="QtySlider" type="HSlider" parent="VBox/QtyRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 4.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="QtyLabel" type="Label" parent="VBox/QtyRow"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
